# couples_mobile_app

./: .gitignore  CMakeLists.txt  CouplesApp.pro  README.md  Style.qml  build-ios.sh  build.sh  couples-app.tsx  images.qrc  main.cpp  main.qml  qml.qrc  styles.qss  test.html
android/: AndroidManifest.xml
android/res/: ic_launcher.xml
components/: BottomNavigation.qml
ios/: Info.plist  LaunchScreen.storyboard  generate_icons.sh
macos/: Info.plist
views/: CallAPI.js  DailyQuestionView.qml  DateIdeasView.qml  HubView.qml  LinkerView.qml  LoginRegisterView.qml  ProfileView.qml  QuizHistoryDetailView.qml  QuizResultsView.qml  QuizzesView.qml  RegisterView.qml
